<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;

class Appointment extends Model
{
    use HasFactory;
    protected $guarded = [];
    protected $table = 'appointment';
    public function property()
    {
        return $this->belongsTo(Property::class, 'property_id');
    }
}
