erDiagram
    USERS {
        int id PK
        string name
        string email
    }

    PROPERTIES {
        int id PK
        int user_id FK
        int district
        int center
        int locality
        string code
        string category
        string alotment_order
        string alotment_date
        string plot_no
        string allotee_name
        string cnic
    }

    INHERITANCES {
        int id PK
        int property_id FK
        string name
        string father_name
        string cnic
        decimal marlas
        int request_id FK
        bool is_current
    }

    ATTCHMENTS {
        int id PK
        int property_id FK
        string order_attach
    }

    TRANSFER_FILES {
        int id PK
        int property_id FK
        int representative_id FK
        int shared_attorney_id FK
    }

    REQUESTS {
        int id PK
        int property_id FK
        string status
        int user_id FK
    }

    TRANSFER_ATTACHES {
        int id PK
        int request_id FK
    }

    REQUEST_PARTICIPENTS {
        int id PK
        int transfer_file_id FK
        int request_id FK
        int owner_id FK
        int representative_id FK
        string mode
    }

    REPRESENTATIVES {
        int id PK
        string type
        string name
        string cnic
    }

    PROPERTY_DOCUMENTS {
        int id PK
        int property_id FK
        int request_id FK
        string document_type
        string file_path
    }

    PROPERTY_STATEMENTS {
        int id PK
        int request_id FK
        int property_id FK
    }

    WITNESSES {
        int id PK
        int request_id FK
        int property_id FK
        string name
        string biometric_id FK
    }

    DUMMY_RECEIVERS {
        int id PK
        int request_id FK
    }

    DUMMY_WITNESSES {
        int id PK
        int request_id FK
    }

    BIOMETRICS {
        int id PK
    }

    LOGIN_BIOMETRICS {
        int id PK
    }

    SCHEDULES {
        int id PK
    }

    APPOINTMENTS {
        int id PK
        int schedule_id FK
        int property_id FK
    }

    USERS ||--o{ PROPERTIES : "owner"
    PROPERTIES ||--o{ INHERITANCES : "has_owners"
    PROPERTIES ||--o{ ATTCHMENTS : "has_attachment"
    PROPERTIES ||--o{ TRANSFER_FILES : "transfer_files"
    PROPERTIES ||--o{ PROPERTY_DOCUMENTS : "documents"

    PROPERTIES ||--o{ APPOINTMENTS : "appointments"
    SCHEDULES ||--o{ APPOINTMENTS : "has"

    REQUESTS ||--o{ TRANSFER_ATTACHES : "has"
    REQUESTS ||--o{ PROPERTY_DOCUMENTS : "has"
    REQUESTS ||--o{ WITNESSES : "has"
    REQUESTS ||--o{ DUMMY_RECEIVERS : "has"
    REQUESTS ||--o{ DUMMY_WITNESSES : "has"
    REQUESTS ||--o{ REQUEST_PARTICIPENTS : "has"
    REQUESTS ||--o{ PROPERTY_STATEMENTS : "has"

    INHERITANCES }o--|| REPRESENTATIVES : "may_use"
    TRANSFER_FILES }o--|| REPRESENTATIVES : "representative"
    WITNESSES }o--|| BIOMETRICS : "biometric"
    INHERITANCES }o--|| BIOMETRICS : "biometric"
